...
        android:layout_marginTop="4dp"
        android:text="email"
        android:textColor="#B0BEC5"
        android:textSize="14sp" />

    <Button
        android:id="@+id/adminProfileRemoveButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:text="Remove Profile"
        android:textAllCaps="false"
        android:backgroundTint="#D32F2F"
        android:textColor="#FFFFFF" />
    <Button
        android:id="@+id/adminToggleOrganizerBtn"
        android:layout_width="match_parent"
...
