<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_dialog_bg">

    <TextView
        android:id="@+id/dialogTitle"
        android:text="Send Message"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#fe7f2d"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/dialogInput"
        android:hint="Type your message..."
        android:minLines="3"
        android:textColor="#FFFFFF"
        android:textColorHint="#80FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/dialogCancel"
            android:text="Cancel"
            android:textSize="16sp"
            android:textColor="#bbbbbb"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/dialogSend"
            android:text="Send"
            android:textSize="16sp"
            android:textColor="#fe7f2d"
            android:padding="10dp"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>
