...
                android:fontFamily="sans-serif-medium"
                android:textSize="20sp"
                android:textColor="#fe7f2d"
                android:layout_marginBottom="16dp" />

            <EditText
                android:id="@+id/editTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Event Name"
                android:textColorHint="#90A4AE"
                android:textColor="@android:color/white"
                android:background="@drawable/bg_input_sharp"
...
                android:fontFamily="sans-serif-medium"
                android:textSize="20sp"
                android:textColor="#fe7f2d"
                android:layout_marginBottom="16dp" />

            <AutoCompleteTextView
                android:id="@+id/editLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Venue or Address"
                android:textColorHint="#90A4AE"
                android:textColor="@android:color/white"
                android:background="@drawable/bg_input_sharp"
...
                        android:textColor="@android:color/white"
                        android:inputType="number" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btnCreateEvent"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Create Event"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAllCaps="false"
...
