<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_deep_space"
    android:padding="12dp">

    <Button
        android:id="@+id/createEventButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="Create New Event"
        android:background="@drawable/bg_glass_button"
        android:textColor="@android:color/white" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerOrganizerEvents"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"/>
</LinearLayout>
